# orbi

./: Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker.yaml  docker.yml  publish.yml  test.yaml  test.yml
docs/: index.html  mock_ortools.py  script.js  style.css
src/: milp.py
src/LibreMIP/: __init__.py
src/orbi/: __init__.py
tests/: __init__.py  __main__.py  test_milp.py
