[metadata]
name = orbi
version = 0.1.0
author = Siddhartha Banerjee
author_email = sidban+emotive.academy@uwalumni.com
description = A Gurobi-like API using Google OR-Tools as the backend solver
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.12
package_dir =
    = src/orbi
packages = find:

[options]
python_requires = >=3.12
install_requires = file: requirements.txt

[flake8]
max-line-length = 88
extend-ignore = E203, W503